[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tts"
dist-name = "tabletop-tools"
requires=[
    "attrs",
]
requires-python = ">=3.7"
author = "Tom Prince"
author-email = "tom.prince@hocat.ca"
home-page = "https://github.com/tomprince/tabletop-tools"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
tts = "tts.cli:main"
