[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tts"
dist-name = "tabletop-tools"
requires = [
    "appdirs",
    "attrs",
    "bson",
    "requests",
]
requires-python = ">=3.7"
author = "Tom Prince"
author-email = "tom.prince@hocat.ca"
description-file = "README.rst"
classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]

[tool.flit.metadata.requires-extra]
upload = [
    "steam",
]

[tool.flit.metadata.urls]
Repository = "https://github.com/tomprince/tabletop-tools"

[tool.flit.scripts]
tts = "tts.cli:main"


[tool.tts_tooling]
release_file = "RELEASE.rst"
changelog = "CHANGELOG.rst"

[tool.black]
include = '\.pyi?$'
